--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.7.2"
+        "bootstrap-icons": "^1.7.2",
+        "onscan.js": "^1.5.2",
+        "sweetalert2": "^11.3.4"
     }
 }
